Commit implementazione carte